--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                 <h1>SPACES <br> THAT <br> INSPIRE</h1>
             </div>
            </div>
+           <div id="hero-shape">
+            <div id="hero1"></div>
+            <div id="hero2"></div>
+            <div id="hero3"></div>
+           </div>
            <video autoplay loop muted src="https://sundown-ivory.vercel.app/video.mp4"></video>
         </div>
     </div>
