--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="fixed-img"></div>
     <div id="main">
         <div id="page1">
            <nav>
@@ -71,7 +72,38 @@
             <div id="suiii">
             </div>
         </div>
-        <div id="page3"></div>
+        <div id="page3">
+           <div id="elem-container">
+                 <div class="elem" id="elem1" data-image="">
+                <div class="overlay"></div>
+                <h2>Makers Studio HOI</h2>
+            </div>
+             <div class="elem" id="elem2">
+                <div class="overlay"></div>
+                <h2>50th Aniversary</h2>
+            </div>
+             <div class="elem" id="elem3">
+                <div class="overlay"></div>
+                <h2>NYFW Popup</h2>
+            </div>
+             <div class="elem" id="elem4">
+                <div class="overlay"></div>
+                <h2>Air Force 12021</h2>
+            </div>
+             <div class="elem" id="elem5">
+                <div class="overlay"></div>
+                <h2>SOHO NYC</h2>
+            </div>
+            <div class="elem" id="elem6">
+                <div class="overlay"></div>
+                <h2>SOHO 2025</h2>
+            </div>
+            <div class="elem" id="elem7">
+                <div class="overlay"></div>
+                <h2>Play New Kidvision</h2>
+            </div>
+           </div>
+        </div>
     </div>
 
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
