--- a/index.html
+++ b/index.html
@@ -74,31 +74,31 @@
         </div>
         <div id="page3">
            <div id="elem-container">
-                 <div class="elem" id="elem1" data-image="">
+                 <div class="elem" id="elem1" data-image="https://assets-global.website-files.com/64d3dd9edfb41666c35b15d4/64d3dd9edfb41666c35b1733_Nike_HOI_50th_SU22_FL1_5388.webp">
                 <div class="overlay"></div>
                 <h2>Makers Studio HOI</h2>
             </div>
-             <div class="elem" id="elem2">
+             <div class="elem" id="elem2" data-image="https://assets-global.website-files.com/64d3dd9edfb41666c35b15d4/64d3dd9edfb41666c35b16f4_Copy%20of%20Nike_Soho_50th_SU22_FL1_6176.webp">
                 <div class="overlay"></div>
                 <h2>50th Aniversary</h2>
             </div>
-             <div class="elem" id="elem3">
+             <div class="elem" id="elem3" data-image="https://assets-global.website-files.com/64d3dd9edfb41666c35b15d4/64d3dd9edfb41666c35b1712_AM704009-p-1600.webp">
                 <div class="overlay"></div>
                 <h2>NYFW Popup</h2>
             </div>
-             <div class="elem" id="elem4">
+             <div class="elem" id="elem4" data-image="https://assets-global.website-files.com/64d3dd9edfb41666c35b15d4/64d3dd9edfb41666c35b16c5_Copy%20of%20Nike_Soho_AMD21_0781_LORES.webp">
                 <div class="overlay"></div>
                 <h2>Air Force 12021</h2>
             </div>
-             <div class="elem" id="elem5">
+             <div class="elem" id="elem5" data-image="https://assets-global.website-files.com/64d3dd9edfb41666c35b15d4/64d3dd9edfb41666c35b1733_Nike_HOI_50th_SU22_FL1_5388.webp">
                 <div class="overlay"></div>
                 <h2>SOHO NYC</h2>
             </div>
-            <div class="elem" id="elem6">
+            <div class="elem" id="elem6" data-image="https://assets-global.website-files.com/64d3dd9edfb41666c35b15d4/64d3dd9edfb41666c35b163b_Copy-of-IMG_1180.webp">
                 <div class="overlay"></div>
                 <h2>SOHO 2025</h2>
             </div>
-            <div class="elem" id="elem7">
+            <div class="elem" id="elem7" data-image="https://assets-global.website-files.com/64d3dd9edfb41666c35b15d4/64d3dd9edfb41666c35b169f_Copy%2520of%2520211023_NikeCHI_PlayNewKids_Beauty-03-p-1600.webp">
                 <div class="overlay"></div>
                 <h2>Play New Kidvision</h2>
             </div>
